Update views views/orders.py, views/carts.py. Теперь GET orders/ принимает флаги active и completed
